--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-hook/window-size": "^3.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
